--- a/index.html
+++ b/index.html
@@ -70,6 +70,5 @@
         </div>
       </section>
     </main>
-    <script src="./login.js"></script>
-  </body>
+<script src="./login.js"></script>  </body>
 </html>
