pass and num changed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <input
                           id="phone-number"
                           type="text"
-                          placeholder="Enter your number"
+                          placeholder="Enter 01999999999"
                           class="input input-bordered"
                           required
                         />
@@ -47,7 +47,7 @@
                         <input
                         id="pin-code"
                           type="password"
-                          placeholder="Enter 4 digit pin"
+                          placeholder="Enter 1234"
                           class="input input-bordered"
                           required
                           autocomplete="on"
